--- a/src/containers/minicart/cart.css
+++ b/src/containers/minicart/cart.css
@@ -3,6 +3,34 @@
     width: 100%;
 }
 
+.cart-items{
+    max-height: 400px;
+    overflow-y: scroll;
+}
+.cart-items:hover{
+    overflow-y: scroll;
+    padding-right: 0px;
+}
+
+.cart-items::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+.cart-items::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+.cart-items::-webkit-scrollbar-thumb {
+    background: #ddd;
+}
+
+/* Handle on hover */
+.cart-items::-webkit-scrollbar-thumb:hover {
+    background: #ccc;
+}
+
 .cart-item {
     display: flex;
     flex-direction: row;
@@ -114,7 +142,7 @@
     box-sizing: content-box !important;
 }
 
-.item-image-holder{
+.item-image-holder {
     display: flex;
 }
 
@@ -126,7 +154,7 @@
     /* font-weight: bold; */
     justify-content: space-between;
     line-height: 1;
-        /* margin: 0 0 0 20px; */
+    /* margin: 0 0 0 20px; */
 }
 
 .counter-control-minus,
@@ -146,8 +174,10 @@
     /* height: 100%;
     width: 8vw;
     object-fit: contain; */
-    height: 24vh;
-    width: 10vw;
+    /* height: 24vh;
+    width: 10vw; */
+    height: 160px;
+    width: 140px;
     object-fit: contain;
     /* width: 160px;
     height: 205px;
@@ -198,15 +228,21 @@
 .product-image {
     /* width: 100%;
     height: auto; */
-    width: 100%; 
+    /* width: 100%; 
     height: 30vw; 
+    object-fit: contain; */
+    width: 630px;
+    height: 410px;
     object-fit: contain;
 }
-.product-mini-image{
+
+.product-mini-image {
     /* width: 80%;
     height: auto; */
-    width: 100%; 
-    height: 8vw; 
+    /* width: 100%; 
+    height: 8vw;  */
+    width: 100px;
+    height: 100px;
     object-fit: contain;
 }
 
@@ -220,17 +256,23 @@
 }
 
 .product-brand {
-    margin: 0 0 0px 0;
+    /* margin: 0 0 0px 0; */
+    margin: 0 0 15px 0;
     color: black;
     font-weight: bold;
-    font-size: 22px;
+    /* font-size: 22px; */
+    font-size: 30px;
+    line-height: 27px;
     /* font-family: sans-serif; */
 }
 
 .product-Details .product-name {
-    margin: 0 0 30px 0;
+    /* margin: 0 0 30px 0; */
+    margin: 0 0 50px 0;
     color: black;
-    font-size: 20px;
+    /* font-size: 20px; */
+    font-size: 30px;
+    line-height: 27px;
     /* font-family: sans-serif; */
     padding-top: 0;
 }
@@ -275,7 +317,8 @@
 }
 
 .product-sizes,
-.product-colors, .product-capacities {
+.product-colors,
+.product-capacities {
     display: flex;
     flex-direction: row;
 }
